add -Dnet.bytebuddy.experimental=true